# icm-20948-6dof-fusion-nrf

./: Cargo.toml  LICENSE.md  README.md  build.rs  flake.nix  memory.x
.cargo/: config.toml
scripts/: visualize.py
src/: comms.rs  icm.rs  main.rs
